--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,12 +6,11 @@
 }
 
 html {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 16px;
 }
 
 body {
+    overflow-x: hidden;
     font-size: 1em;
 }
